# The_Evolution_of_Todos_Hackathon-II

./: phase3-merged-plan.md
phase3-ai-chatbot/backend/: .env.example  inspect_agents.py  pyproject.toml  requirements.txt  search_lib.py  test_grok.py  test_groq.py  test_openrouter.py
phase3-ai-chatbot/backend/src/: main.py
phase3-ai-chatbot/backend/src/agent/: __init__.py  config.py  runner.py  todo_agent.py
phase3-ai-chatbot/backend/src/api/: chat.py
phase3-ai-chatbot/backend/src/models/: __init__.py
phase3-ai-chatbot/frontend/: next.config.ts  package-lock.json
phase3-ai-chatbot/frontend/app/: error.tsx  layout.tsx
phase3-ai-chatbot/frontend/app/about/: page.tsx
phase3-ai-chatbot/frontend/app/chat/: page.tsx
phase3-ai-chatbot/frontend/app/contact/: page.tsx
phase3-ai-chatbot/frontend/app/dashboard/: page.tsx
phase3-ai-chatbot/frontend/app/login/: page.tsx
phase3-ai-chatbot/frontend/app/signup/: page.tsx
phase3-ai-chatbot/frontend/components/chat/: ChatContainer.tsx  ChatDrawer.tsx  ConversationList.tsx  LoadingIndicator.tsx  MessageBubble.tsx  MessageInput.tsx  TaskPreview.tsx
phase3-ai-chatbot/frontend/components/layout/: Navbar.tsx
phase3-ai-chatbot/frontend/components/task/: EmptyState.tsx  FilterTabs.tsx  TaskCard.tsx  TaskList.tsx
phase3-ai-chatbot/frontend/components/ui/: Checkbox.tsx  LoadingSpinner.tsx
phase3-ai-chatbot/frontend/lib/: api.ts
phase3-ai-chatbot/frontend/tests/e2e/: dashboard.spec.ts
